[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadsheet_intelligence"
version = "0.1.0"
authors = [
  { name = "Galirage, Inc.", email = "info@galirage.com" }
]
description = "A package for spreadsheet data loader to process with LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "toml",
  "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/galirage/gg-knowledge-base"

[tool.setuptools]
packages = ["spreadsheet_intelligence"]

[tool.setuptools.packages.find]
exclude = ["tests*", "tests"]

[project.classifiers]
"Programming Language :: Python :: 3"
"License :: OSI Approved :: MIT License"
"Operating System :: OS Independent"
